--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
   
 before_install: 
      #export GCSFUSE_REPO=gcsfuse-`lsb_release -c -s`; 
-     echo 'deb http://packages.cloud.google.com/apt trusty main' | sudo tee /etc/apt/sources.list.d/gcsfuse.list ;
+     echo 'deb http://packages.cloud.google.com/apt gcsfuse-trusty main' | sudo tee /etc/apt/sources.list.d/gcsfuse.list ;
      curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add - ;
      sudo apt-get -qq update && sudo apt-get -qq upgrade ;
      sudo apt-get -qq install -y gcsfuse postgresql; 
