--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ before_install:
      #export GCSFUSE_REPO=gcsfuse-`lsb_release -c -s`; 
      echo 'deb http://packages.cloud.google.com/apt gcsfuse-trusty main' | sudo tee /etc/apt/sources.list.d/gcsfuse.list ;
      curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add - ;
-     sudo apt-get update && sudo apt-get upgrade -y ;
+     sudo apt-get update ;
+     #& sudo apt-get upgrade -y ;
      sudo apt-get install -y gcsfuse postgresql; 
 
 install:
