--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
     echo 'deb http://packages.cloud.google.com/apt gcsfuse-trusty main' | sudo tee /etc/apt/sources.list.d/gcsfuse.list ;
     curl -s https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add - ;
     sudo apt-get update ;
-    sudo apt-get install -y gcsfuse postgresql; 
+    sudo apt-get install -y gcsfuse ; 
 
 install:
     echo "install step";
