--- a/codecov.yml
+++ b/codecov.yml
@@ -1,8 +1,15 @@
-[run]
-branch = True
+# Team Yaml
+coverage:
+  round: down
+  precision: 5
 
-[report]
-exclude_lines =
-    pragma: no cover
-    if __name__ == .__main__.:
-    
+# Repository Yaml
+coverage:
+  round: up
+  range: 0..10
+
+# Used in Codecov after updating
+coverage:
+  round: up
+  range: 0..10
+  precision: 5
